@@ -495,6 +495,9 @@ throws|throws
 name|IOException
 block|{
 name|PriorityQueue
+argument_list|<
+name|TermDf
+argument_list|>
 name|pq
 init|=
 operator|new
@@ -599,7 +602,7 @@ argument_list|()
 decl_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 operator|new
 name|TermDf
@@ -741,6 +744,9 @@ class|class
 name|TermsDfQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|TermDf
+argument_list|>
 block|{
 DECL|method|TermsDfQueue
 name|TermsDfQueue
@@ -760,29 +766,13 @@ specifier|protected
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|TermDf
 name|tf1
-init|=
-operator|(
-name|TermDf
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|TermDf
 name|tf2
-init|=
-operator|(
-name|TermDf
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 return|return
 name|tf1
 operator|.
