@@ -280,7 +280,7 @@ condition|)
 block|{
 name|tiq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 operator|new
 name|TermInfo
@@ -312,7 +312,7 @@ condition|)
 block|{
 name|tiq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 operator|new
 name|TermInfo
@@ -439,6 +439,9 @@ class|class
 name|TermInfoQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|TermInfo
+argument_list|>
 block|{
 DECL|method|TermInfoQueue
 name|TermInfoQueue
@@ -459,29 +462,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|TermInfo
 name|termInfoA
-init|=
-operator|(
-name|TermInfo
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|TermInfo
 name|termInfoB
-init|=
-operator|(
-name|TermInfo
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 return|return
 name|termInfoA
 operator|.
