@@ -1098,7 +1098,7 @@ argument_list|)
 decl_stmt|;
 name|variantsQ
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 name|st
 argument_list|)
@@ -1219,7 +1219,7 @@ argument_list|)
 expr_stmt|;
 name|q
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 name|st
 argument_list|)
@@ -1665,6 +1665,9 @@ class|class
 name|ScoreTermQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|ScoreTerm
+argument_list|>
 block|{
 DECL|method|ScoreTermQueue
 specifier|public
@@ -1686,29 +1689,13 @@ specifier|protected
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|ScoreTerm
 name|termA
-init|=
-operator|(
-name|ScoreTerm
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|ScoreTerm
 name|termB
-init|=
-operator|(
-name|ScoreTerm
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 if|if
 condition|(
 name|termA
