@@ -1607,7 +1607,7 @@ decl_stmt|;
 comment|// only really need 1st 3 entries, other ones are for troubleshooting
 name|res
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 operator|new
 name|Object
@@ -3026,6 +3026,10 @@ class|class
 name|FreqQ
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|Object
+index|[]
+argument_list|>
 block|{
 DECL|method|FreqQ
 name|FreqQ
@@ -3046,32 +3050,14 @@ name|boolean
 name|lessThan
 parameter_list|(
 name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
-name|Object
 index|[]
 name|aa
-init|=
-operator|(
-name|Object
-index|[]
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|Object
 index|[]
 name|bb
-init|=
-operator|(
-name|Object
-index|[]
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 name|Float
 name|fa
 init|=
