@@ -39,6 +39,9 @@ class|class
 name|SuggestWordQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|SuggestWord
+argument_list|>
 block|{
 DECL|method|SuggestWordQueue
 name|SuggestWordQueue
@@ -59,29 +62,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|SuggestWord
 name|wa
-init|=
-operator|(
-name|SuggestWord
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|SuggestWord
 name|wb
-init|=
-operator|(
-name|SuggestWord
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 name|int
 name|val
 init|=
