@@ -91,6 +91,9 @@ class|class
 name|TermPositionsQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|TermPositions
+argument_list|>
 block|{
 DECL|method|TermPositionsQueue
 name|TermPositionsQueue
@@ -143,7 +146,7 @@ operator|.
 name|next
 argument_list|()
 condition|)
-name|put
+name|add
 argument_list|(
 name|tp
 argument_list|)
@@ -170,30 +173,20 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
+name|TermPositions
 name|a
 parameter_list|,
-name|Object
+name|TermPositions
 name|b
 parameter_list|)
 block|{
 return|return
-operator|(
-operator|(
-name|TermPositions
-operator|)
 name|a
-operator|)
 operator|.
 name|doc
 argument_list|()
 operator|<
-operator|(
-operator|(
-name|TermPositions
-operator|)
 name|b
-operator|)
 operator|.
 name|doc
 argument_list|()
@@ -543,7 +536,7 @@ argument_list|()
 condition|)
 name|_termPositionsQueue
 operator|.
-name|adjustTop
+name|updateTop
 argument_list|()
 expr_stmt|;
 else|else
@@ -664,7 +657,7 @@ argument_list|)
 condition|)
 name|_termPositionsQueue
 operator|.
-name|put
+name|add
 argument_list|(
 name|tp
 argument_list|)
