@@ -43,6 +43,9 @@ class|class
 name|SegmentMergeQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|SegmentMergeInfo
+argument_list|>
 block|{
 DECL|method|SegmentMergeQueue
 name|SegmentMergeQueue
@@ -63,29 +66,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|SegmentMergeInfo
 name|stiA
-init|=
-operator|(
-name|SegmentMergeInfo
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|SegmentMergeInfo
 name|stiB
-init|=
-operator|(
-name|SegmentMergeInfo
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 name|int
 name|comparison
 init|=
