@@ -34,6 +34,9 @@ class|class
 name|HitQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|ScoreDoc
+argument_list|>
 block|{
 DECL|field|prePopulate
 specifier|private
@@ -66,7 +69,7 @@ block|}
 comment|// Returns null if prePopulate is false.
 DECL|method|getSentinelObject
 specifier|protected
-name|Object
+name|ScoreDoc
 name|getSentinelObject
 parameter_list|()
 block|{
@@ -98,29 +101,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|a
-parameter_list|,
-name|Object
-name|b
-parameter_list|)
-block|{
 name|ScoreDoc
 name|hitA
-init|=
-operator|(
-name|ScoreDoc
-operator|)
-name|a
-decl_stmt|;
+parameter_list|,
 name|ScoreDoc
 name|hitB
-init|=
-operator|(
-name|ScoreDoc
-operator|)
-name|b
-decl_stmt|;
+parameter_list|)
+block|{
 if|if
 condition|(
 name|hitA
