@@ -938,10 +938,11 @@ expr_stmt|;
 comment|// convert doc
 if|if
 condition|(
-operator|!
+name|scoreDoc
+operator|==
 name|hq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 name|scoreDoc
 argument_list|)
@@ -1295,11 +1296,15 @@ expr_stmt|;
 comment|// convert doc
 if|if
 condition|(
-operator|!
+name|scoreDoc
+operator|==
 name|hq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
+operator|(
+name|FieldDoc
+operator|)
 name|scoreDoc
 argument_list|)
 condition|)
