@@ -34,6 +34,9 @@ class|class
 name|PhraseQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|PhrasePositions
+argument_list|>
 block|{
 DECL|method|PhraseQueue
 name|PhraseQueue
@@ -54,29 +57,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|o1
-parameter_list|,
-name|Object
-name|o2
-parameter_list|)
-block|{
 name|PhrasePositions
 name|pp1
-init|=
-operator|(
-name|PhrasePositions
-operator|)
-name|o1
-decl_stmt|;
+parameter_list|,
 name|PhrasePositions
 name|pp2
-init|=
-operator|(
-name|PhrasePositions
-operator|)
-name|o2
-decl_stmt|;
+parameter_list|)
+block|{
 if|if
 condition|(
 name|pp1
