@@ -186,6 +186,9 @@ class|class
 name|CellQueue
 extends|extends
 name|PriorityQueue
+argument_list|<
+name|SpansCell
+argument_list|>
 block|{
 DECL|method|CellQueue
 specifier|public
@@ -207,29 +210,13 @@ specifier|final
 name|boolean
 name|lessThan
 parameter_list|(
-name|Object
-name|o1
-parameter_list|,
-name|Object
-name|o2
-parameter_list|)
-block|{
 name|SpansCell
 name|spans1
-init|=
-operator|(
-name|SpansCell
-operator|)
-name|o1
-decl_stmt|;
+parameter_list|,
 name|SpansCell
 name|spans2
-init|=
-operator|(
-name|SpansCell
-operator|)
-name|o2
-decl_stmt|;
+parameter_list|)
+block|{
 if|if
 condition|(
 name|spans1
@@ -715,7 +702,7 @@ block|{
 comment|// trigger further scanning
 name|queue
 operator|.
-name|adjustTop
+name|updateTop
 argument_list|()
 expr_stmt|;
 comment|// maintain queue
@@ -847,7 +834,7 @@ condition|)
 block|{
 name|queue
 operator|.
-name|adjustTop
+name|updateTop
 argument_list|()
 expr_stmt|;
 comment|// maintain queue
@@ -955,7 +942,7 @@ condition|)
 block|{
 name|queue
 operator|.
-name|adjustTop
+name|updateTop
 argument_list|()
 expr_stmt|;
 block|}
@@ -1402,7 +1389,7 @@ control|)
 block|{
 name|queue
 operator|.
-name|put
+name|add
 argument_list|(
 name|cell
 argument_list|)
