@@ -174,7 +174,7 @@ name|next
 expr_stmt|;
 name|pq
 operator|.
-name|put
+name|add
 argument_list|(
 name|next
 argument_list|)
@@ -270,21 +270,21 @@ argument_list|)
 decl_stmt|;
 name|pq
 operator|.
-name|put
+name|add
 argument_list|(
 literal|2
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|put
+name|add
 argument_list|(
 literal|3
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|put
+name|add
 argument_list|(
 literal|1
 argument_list|)
@@ -335,42 +335,42 @@ argument_list|)
 decl_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|2
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|3
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|1
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|5
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|7
 argument_list|)
 expr_stmt|;
 name|pq
 operator|.
-name|insert
+name|insertWithOverflow
 argument_list|(
 literal|1
 argument_list|)
